--- a/About.html
+++ b/About.html
@@ -19,77 +19,54 @@
 
   </script>
 </head>
+  <div class="container-fluid">
+    <section>
+      <div class="container-fluid">
+        <nav class="navbar navbar-expand-sm fixed-top">
+          <a class="navbar-brand ms-auto" href="index.html">
+            <img src="/images/newlogo.png" class="logonav">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+            <ul class="navbar-nav ">
+              <li class="nav-item dropdown px-2">
+                <a class="nav-link dropdown-toggle btn inner-clr" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  Continents
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a href="Africa.html" class="btn inner-clrn dropdown-item">African Gum</a></li>
+                  <li><a href="Asia.html" class="btn inner-clrn dropdown-item">Asian Gum</a></li>
+                  <li><a href="Europe.html" class="btn inner-clrn dropdown-item">European Gum</a></li>
+                  <li><a href="North America.html" class="btn inner-clrn dropdown-item">North American Gum</a></li>
+                  <li><a href="Oceania.html" class="btn inner-clrn dropdown-item">Oceania Gum</a></li>
+                  <li><a href="South America.html" class="btn inner-clrn dropdown-item">South American Gum</a></li>
+                </ul>
+              </li>
+              <li class="nav-item px-2">
+                <a href="Contact.html" class="nav-link btn inner-clr">
+                  Contact Us!
+                </a>
+              </li>
+              <li class="nav-item px-2">
+                <a href="About.html" class="nav-link btn inner-clr">
+                  About Us!
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </section>
 
-<section>
-  <nav class="navbar navbar-expand-md navbar-class fixed-top">
-    <div class="container-fluid">
-      <div class="col-sm-1 justify-content-start">
-        <a class="navbar-brand" href="index.html">
-          <img src="/images/newlogo.png" width="100" height="100">
-        </a>
-      </div>
-      <div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
-      <div class="col-sm-11 ps-2 container-fluid">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            
-          </ul>
-          <ul class="navbar-nav  mx-2 mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link mx-2 mb-2 btn btn-outline-light button-29" href="About.html">About Us!</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link mx-2 mb-2 btn btn-outline-light button-29" href="Our_gums.html">Our Gums!</a>
-            </li>
-          </ul>
-          <ul class="navbar-nav mx-3 mb-2">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle btn btn-outline-light button-29" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Continents!
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Africa.html">Africa</a></li>
-                <li><a class="dropdown-item" href="Asia.html">Asia</a></li>
-                <li><a class="dropdown-item" href="Europe.html">Europe</a></li>
-                <li><a class="dropdown-item" href="North America.html">North America</a></li>
-                <li><a class="dropdown-item" href="South America.html">South America</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </nav>
-</section>
 
-<body>
-  <div class="search">
-    <div class="icon"></div>
-    <div class="input">
-      <input type="text" placeholder="Search" id="mysearch">
-    </div>
-    <span class="clear" onclick="document.getElementbyId
-    ('mysearch').value = ''"></span>
   </div>
 
 
-  <a href="index.html">sdf</a>
-
-
-
-  <script>
-    const icon = document.querySelector('.icon');
-    const search = document.querySelector('.search');
-    icon.onclick = function(){
-      search.classList.toggle('active')
-    }
-  </script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
