--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <!--This is the sites navbar-->
 
     <section>
-      <nav class="navbar navbar-expand-sm fixed-top">
-        <div class="container-fluid">
+      <div class="container-fluid">
+        <nav class="navbar navbar-expand-sm fixed-top">
           <a class="navbar-brand ms-auto" href="index.html">
             <img src="/images/newlogo.png" class="logonav">
           </a>
@@ -40,33 +40,33 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav ">
               <li class="nav-item dropdown px-2">
-                <a class="nav-link dropdown-toggle btn button-29" role="button" data-bs-toggle="dropdown"
+                <a class="nav-link dropdown-toggle btn inner-clr" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
                   Continents
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="Africa.html">Africa</a></li>
-                  <li><a class="dropdown-item" href="Asia.html">Asia</a></li>
-                  <li><a class="dropdown-item" href="Europe.html">Europe</a></li>
-                  <li><a class="dropdown-item" href="North America.html">North America</a></li>
-                  <li><a class="dropdown-item" href="Oceania.html">Oceana</a></li>
-                  <li><a class="dropdown-item" href="South America.html">South America</a></li>
+                  <li><a href="Africa.html" class="btn inner-clrn dropdown-item">African Gum</a></li>
+                  <li><a href="Asia.html" class="btn inner-clrn dropdown-item">Asian Gum</a></li>
+                  <li><a href="Europe.html" class="btn inner-clrn dropdown-item">European Gum</a></li>
+                  <li><a href="North America.html" class="btn inner-clrn dropdown-item">North American Gum</a></li>
+                  <li><a href="Oceania.html" class="btn inner-clrn dropdown-item">Oceania Gum</a></li>
+                  <li><a href="South America.html" class="btn inner-clrn dropdown-item">South American Gum</a></li>
                 </ul>
               </li>
               <li class="nav-item px-2">
-                <a class="nav-link btn button-29" href="Specialties.html">
-                  Specialty Gums
+                <a href="Contact.html" class="nav-link btn inner-clr">
+                  Contact Us!
                 </a>
               </li>
               <li class="nav-item px-2">
-                <a class="nav-link btn button-29" href="About.html">
-                  About Us
+                <a href="About.html" class="nav-link btn inner-clr">
+                  About Us!
                 </a>
               </li>
             </ul>
           </div>
-        </div>
-      </nav>
+        </nav>
+      </div>
     </section>
 
 
@@ -84,7 +84,7 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/images/ArsenalFillerIMG-1.png" class="d-block w-100 h-40" alt="...">
+              <img src="/images/Tropical.jpg" class="d-block w-100 h-40" alt="...">
             </div>
             <div class="carousel-item">
               <img src="/images/ArsenalFillerIMG-1.png" class="d-block w-100 h-40" alt="...">
@@ -109,16 +109,6 @@
 
     <br>
 
-
-
-
-
-    <section class="special-card">
-
-    </section>
-
-
-
     <section class="ourmission">
       <div class="container-fluid">
         <div class="col-sm-12">
@@ -134,19 +124,6 @@
       </div>
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!--Beginning of carousel-->
 
     <section class=" pt-2 px-2">
@@ -156,46 +133,26 @@
             <div class="carousel-item active">
               <div class="row card-names">
                 <div class="col-sm-12 text-center">
-                  <h1>Highest Rated!</h1>
+                  <h1>Our Most Popular Gums!</h1>
                 </div>
               </div>
               <div class="row">
                 <div class="card-group">
                   <div class="col-sm-4 px-2 py-2">
                     <div class="card card-carousel mid-clr">
-                      <div class="card-body">
+                      <div class="card-body text-center">
                         <p>
                           <h5 class="card-title">
                             Delivery
                           </h5>
-                          <p class="card-text">
-                            Order from our online menu and have it delivered straight to your door!
-                          </p>
-                          <a href="Contact.html" class="btn inner-clr">
-                            Our Number
-                          </a>
-                          <br>
-                          <img class="card-img-top" src="./img/delivery.jpg" alt="Card image">
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-sm-4 px-2 py-2">
-                    <div class="card card-carousel mid-clr">
-                      <div class="card-body">
-                        <p>
-                          <h5 class="card-title">
-                            Order Online
-                          </h5>
-                          <p class="card-text">
-                            Order Online from your home and pick up ready to go in our restaurant!
-                          </p>
+                          <hr>
                           <a href="Order.html" class="btn inner-clr">
                             Order Online
                           </a>
-                          <br>
-                          <img class="card-img-top" src="./img/ordering.jpg" alt="Card image">
+                          <a href = "index.html"><img class="card-img-top" src="/images/Birria.png" alt="Card image"></a>
+                          <p class="card-text">
+                            Order from our online menu and have it delivered straight to your door!
+                          </p>
                         </p>
                       </div>
                     </div>
@@ -203,19 +160,39 @@
 
                   <div class="col-sm-4 px-2 py-2">
                     <div class="card card-carousel mid-clr">
-                      <div class="card-body">
+                      <div class="card-body text-center">
                         <p>
                           <h5 class="card-title">
-                            Dine-in
+                            Delivery
                           </h5>
-                          <p class="card-text">
-                            Have a look at the wide variety of food in our menu before you dine in!
-                          </p>
-                          <a href="Menu.html" class="btn inner-clr">
-                            Our Menu
+                          <hr>
+                          <a href="Order.html" class="btn inner-clr">
+                            Order Online
                           </a>
-                          <br>
-                          <img class="card-img-top" src="./img/sushi.jpg" alt="Card image">
+                          <a href = "index.html"><img class="card-img-top" src="/images/Empanada.png" alt="Card image"></a>
+                          <p class="card-text">
+                            Order from our online menu and have it delivered straight to your door!
+                          </p>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-4 px-2 py-2">
+                    <div class="card card-carousel mid-clr">
+                      <div class="card-body text-center">
+                        <p>
+                          <h5 class="card-title">
+                            Delivery
+                          </h5>
+                          <hr>
+                          <a href="Order.html" class="btn inner-clr">
+                            Order Online
+                          </a>
+                          <a href = "index.html"><img class="card-img-top" src="/images/Viscacha.png" alt="Card image"></a>
+                          <p class="card-text">
+                            Order from our online menu and have it delivered straight to your door!
+                          </p>
                         </p>
                       </div>
                     </div>
@@ -225,7 +202,7 @@
             </div>
             
           </div>
-          
+
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
             data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -337,9 +314,11 @@ of Simple CSS Waves-->
 
     <!--End to Top button-->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-    </script>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+  </script>
 
 
 </body>
