--- a/Contact.html
+++ b/Contact.html
@@ -18,47 +18,52 @@
 </head>
 
 <body>
-  <section>
-    <nav class="navbar navbar-expand-sm fixed-top">
+  <div class="container-fluid">
+    <section>
       <div class="container-fluid">
-        <a class="navbar-brand ms-auto" href="index.html">
-          <img src="/images/images/newlogo.png" class="logonav">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-          <ul class="navbar-nav ">
-            <li class="nav-item dropdown px-2">
-              <a class="nav-link dropdown-toggle btn button-29" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Continents
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Africa.html">Africa</a></li>
-                <li><a class="dropdown-item" href="Asia.html">Asia</a></li>
-                <li><a class="dropdown-item" href="Europe.html">Europe</a></li>
-                <li><a class="dropdown-item" href="North America.html">North America</a></li>
-                <li><a class="dropdown-item" href="Oceania.html">Oceana</a></li>
-                <li><a class="dropdown-item" href="South America.html">South America</a></li>
-              </ul>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link btn button-29" href="Specialties.html">
-                Specialty Gums
-              </a>
-            </li>
-            <li class="nav-item px-2">
-              <a class="nav-link btn button-29" href="About.html">
-                About Us
-              </a>
-            </li>
-          </ul>
-        </div>
+        <nav class="navbar navbar-expand-sm fixed-top">
+          <a class="navbar-brand ms-auto" href="index.html">
+            <img src="/images/newlogo.png" class="logonav">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+            <ul class="navbar-nav ">
+              <li class="nav-item dropdown px-2">
+                <a class="nav-link dropdown-toggle btn inner-clr" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  Continents
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a href="Africa.html" class="btn inner-clrn dropdown-item">African Gum</a></li>
+                  <li><a href="Asia.html" class="btn inner-clrn dropdown-item">Asian Gum</a></li>
+                  <li><a href="Europe.html" class="btn inner-clrn dropdown-item">European Gum</a></li>
+                  <li><a href="North America.html" class="btn inner-clrn dropdown-item">North American Gum</a></li>
+                  <li><a href="Oceania.html" class="btn inner-clrn dropdown-item">Oceania Gum</a></li>
+                  <li><a href="South America.html" class="btn inner-clrn dropdown-item">South American Gum</a></li>
+                </ul>
+              </li>
+              <li class="nav-item px-2">
+                <a href="Contact.html" class="nav-link btn inner-clr">
+                  Contact Us!
+                </a>
+              </li>
+              <li class="nav-item px-2">
+                <a href="About.html" class="nav-link btn inner-clr">
+                  About Us!
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </div>
-    </nav>
-  </section>
+    </section>
+
+
+  </div>
    
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
