--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <?php
   include_once 'includes/dbh.inc.php';
 ?>
-
 <!doctype html>
 <html lang="en">
 
@@ -12,19 +11,20 @@
   <meta name="author" content="Andrew Ellis, Johnny Martinez, Champ Nguyen">
   <meta name="keywords" content="Gum, exotic flavors, Exotic Gum, World Gum">
   <link rel="shortcut icon" href="/images/images/newlogo.png">
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
   <title>Exotic Gum!</title>
-
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://kit.fontawesome.com/1c0e6c2e01.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <div class="container-fluid">
+  
+
+
     <!--This is the sites navbar-->
+
+
 
     <section>
       <div class="container-fluid">
@@ -40,26 +40,28 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav ">
               <li class="nav-item dropdown px-2">
-                <a class="nav-link dropdown-toggle btn inner-clr" role="button" data-bs-toggle="dropdown"
+                <a class="nav-link dropdown-toggle btn btn-inner-clr inner-clr" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
                   Continents
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a href="Africa.html" class="btn inner-clrn dropdown-item">African Gum</a></li>
-                  <li><a href="Asia.html" class="btn inner-clrn dropdown-item">Asian Gum</a></li>
-                  <li><a href="Europe.html" class="btn inner-clrn dropdown-item">European Gum</a></li>
-                  <li><a href="North America.html" class="btn inner-clrn dropdown-item">North American Gum</a></li>
-                  <li><a href="Oceania.html" class="btn inner-clrn dropdown-item">Oceania Gum</a></li>
-                  <li><a href="South America.html" class="btn inner-clrn dropdown-item">South American Gum</a></li>
+                  <li><a href="Africa.html" class="btn btn-inner-clr inner-clrn dropdown-item">African Gum</a></li>
+                  <li><a href="Asia.html" class="btn btn-inner-clr inner-clrn dropdown-item">Asian Gum</a></li>
+                  <li><a href="Europe.html" class="btn btn-inner-clr inner-clrn dropdown-item">European Gum</a></li>
+                  <li><a href="North America.html" class="btn btn-inner-clr inner-clrn dropdown-item">North American
+                      Gum</a></li>
+                  <li><a href="Oceania.html" class="btn btn-inner-clr inner-clrn dropdown-item">Oceania Gum</a></li>
+                  <li><a href="South America.html" class="btn btn-inner-clr inner-clrn dropdown-item">South American
+                      Gum</a></li>
                 </ul>
               </li>
               <li class="nav-item px-2">
-                <a href="Contact.html" class="nav-link btn inner-clr">
+                <a href="Contact.html" class="nav-link btn btn-inner-clr inner-clr">
                   Contact Us!
                 </a>
               </li>
               <li class="nav-item px-2">
-                <a href="About.html" class="nav-link btn inner-clr">
+                <a href="About.html" class="nav-link btn btn-inner-clr inner-clr">
                   About Us!
                 </a>
               </li>
@@ -68,11 +70,8 @@
         </nav>
       </div>
     </section>
-
-
-
     <section class="carousel">
-      <div class="container-fluid">
+      
         <div id="carouselExampleIndicators" class="carousel slide">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -104,27 +103,12 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-      </div>
-    </section>
-
+      </section>
     <br>
 
-    <section class="ourmission">
-      <div class="container-fluid">
-        <div class="col-sm-12">
-          <div class="justify-content-left row">
-            <div class="col-sm-6">
-              <img class="ourmission-img" src="" alt="">
-            </div>
-            <div class="col-sm-6">
-              <h1>bruh again</h1>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!--Beginning of carousel-->
+
 
     <section class=" pt-2 px-2">
       <div class="container-fluid">
@@ -146,10 +130,10 @@
                             Delivery
                           </h5>
                           <hr>
-                          <a href="Order.html" class="btn inner-clr">
+                          <a href="Order.html" class="btn btn-inner-clr inner-clr">
                             Order Online
                           </a>
-                          <a href = "index.html"><img class="card-img-top" src="/images/Birria.png" alt="Card image"></a>
+                          <a href="index.html"><img class="card-img-top" src="/images/Birria.png" alt="Card image"></a>
                           <p class="card-text">
                             Order from our online menu and have it delivered straight to your door!
                           </p>
@@ -157,7 +141,6 @@
                       </div>
                     </div>
                   </div>
-
                   <div class="col-sm-4 px-2 py-2">
                     <div class="card card-carousel mid-clr">
                       <div class="card-body text-center">
@@ -166,10 +149,11 @@
                             Delivery
                           </h5>
                           <hr>
-                          <a href="Order.html" class="btn inner-clr">
+                          <a href="Order.html" class="btn btn-inner-clr inner-clr">
                             Order Online
                           </a>
-                          <a href = "index.html"><img class="card-img-top" src="/images/Empanada.png" alt="Card image"></a>
+                          <a href="index.html"><img class="card-img-top" src="/images/Empanada.png"
+                              alt="Card image"></a>
                           <p class="card-text">
                             Order from our online menu and have it delivered straight to your door!
                           </p>
@@ -177,7 +161,6 @@
                       </div>
                     </div>
                   </div>
-
                   <div class="col-sm-4 px-2 py-2">
                     <div class="card card-carousel mid-clr">
                       <div class="card-body text-center">
@@ -186,10 +169,11 @@
                             Delivery
                           </h5>
                           <hr>
-                          <a href="Order.html" class="btn inner-clr">
+                          <a href="Order.html" class="btn btn-inner-clr inner-clr">
                             Order Online
                           </a>
-                          <a href = "index.html"><img class="card-img-top" src="/images/Viscacha.png" alt="Card image"></a>
+                          <a href="index.html"><img class="card-img-top" src="/images/Viscacha.png"
+                              alt="Card image"></a>
                           <p class="card-text">
                             Order from our online menu and have it delivered straight to your door!
                           </p>
@@ -200,9 +184,7 @@
                 </div>
               </div>
             </div>
-            
           </div>
-
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
             data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -217,111 +199,130 @@
       </div>
     </section>
 
+
     <!--End of card carousel-->
 
 
 
+    <!--Back to Top button-->
+
+
+    <a href="#" class="b2t mx-auto"><i class="fas fa-chevron-up"></i></a>
+
+
+    <!--End to Top button-->
 
 
 
 
+    <!-- parrallax -->
 
 
+    <section class="parallax-section">
+      <div class="parallax">
 
 
+        <!-- end of the parralax -->
 
-
-    <!--Hey! This is the original version
-of Simple CSS Waves-->
-    <div class="header">
-      <!--Waves Container-->
-      <div>
-        <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-          viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
-          <defs>
-            <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+        <!--CSS Waves-->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="#CDF5FF" fill-opacity="1" d="M0,96L48,90.7C96,85,192,75,288,69.3C384,64,480,64,576,80C672,96,768,128,864,122.7C960,117,1056,75,1152,53.3C1248,32,1344,32,1392,32L1440,32L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path><defs>
+            <style type="text/css">
+              rect{fill:url(#MyGradient)}
+            </style>
+            <linearGradient id="MyGradient">
+              <stop offset="50%" stop-color="#33ABCA" />
+              <stop offset="5%" stop-color="#CDF5FF" />
+            </linearGradient>
           </defs>
-          <g class="parallax">
-            <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(122,198,217,0.7" />
-            <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(109,178,195,0.5)" />
-            <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(122,198,217,0.3)" />
-            <use xlink:href="#gentle-wave" x="48" y="7" fill="#7AC6D9" />
-          </g>
         </svg>
-      </div>
-      <!--Waves end-->
-    </div>
-    <!--Header ends-->
-
-
-
-
-    <!--Beginning of footer-->
-
-    <section class="footer-section">
-
-      <footer>
-        <div class="container-fluid">
-          <br>
-          <div class="row text-center">
-            <div class="col-md-4">
-              <h2 class="footer-head">Follow Us</h2>
-
-              Follow us on our Social Medias to keep up with recent news about new and sup and coming Gums!
-
-              <br>
-              <br>
-
-              <a href="https://www.facebook.com/Sakura-Japanese-Restaurant-367551639982061/">
-
-                <img src="/images/Facebook_Logo.png" height="50px">
-
-              </a>
-
-            </div>
-            <div class="col-md-4">
-
-              <br>
-              <a href="#top">
-                <img src="/images/newlogo.png " height="150px">
-              </a>
-              <br>
-            </div>
-            <div class="col-md-4 ">
-
-              <h2 class="footer-head">Find Us</h2>
-
-              Our location!
-              <br>
-              The depths of the Mariana Trench
-              <br>
-              The Sea
-              38305
-              <br>
-              (555) 555-5555
-
-            </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="header">
+          <div>
+            <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+              <defs>
+                <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+              </defs>
+              <g class="parallax">
+                <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(122,198,217,0.7" />
+                <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(109,178,195,0.5)" />
+                <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(122,198,217,0.3)" />
+                <use xlink:href="#gentle-wave" x="48" y="7" fill="#7AC6D9" />
+              </g>
+            </svg>
           </div>
-          <br>
-      </footer>
+        </div>
+
+        <!--End of waves-->
+
+        <!--Beginning of footer-->
+
+
+        <section class="footer-section">
+          <footer>
+            <div class="container-fluid">
+              <br>
+              <div class="row text-center">
+                <div class="col-md-4">
+                  <h2 class="footer-head">Follow Us</h2>
+                  Follow us on our Social Medias to keep up with recent news about new and sup and coming Gums!
+                  <br>
+                  <br>
+                  <a href="https://www.facebook.com/Sakura-Japanese-Restaurant-367551639982061/">
+                    <img src="/images/Facebook_Logo.png" height="50px">
+                  </a>
+                </div>
+                <div class="col-md-4">
+                  <br>
+                  <a href="#top">
+                    <img src="/images/newlogo.png " height="150px">
+                  </a>
+                  <br>
+                </div>
+                <div class="col-md-4 ">
+                  <h2 class="footer-head">Find Us</h2>
+                  Our location!
+                  <br>
+                  The depths of the Mariana Trench
+                  <br>
+                  The Sea
+                  38305
+                  <br>
+                  (555) 555-5555
+                </div>
+              </div>
+              <br>
+              <br>
+
+          </footer>
+        </section>
     </section>
 
     <!--End of footer-->
 
-    <!--Back to Top button-->
 
-    <a href="#" class="b2t mx-auto"><i class="fas fa-chevron-up"></i></a>
 
-    <!--End to Top button-->
 
-  </div>
+  <!--Back to Top button-->
+
+
+  <a href="#" class="b2t mx-auto"><i class="fas fa-chevron-up"></i></a>
+
+
+  <!--End to Top button-->
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
   </script>
-
-
 </body>
-
 
 </html>
