--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
   <title>Exotic Gum!</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://kit.fontawesome.com/1c0e6c2e01.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/5.3.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,900,900i" rel="stylesheet">
 </head>
 
 <body>
 
-  <!--This is the sites navbar-->
+  <!--Beginning of site nav bar-->
 
   <section>
     <div class="container-fluid">
@@ -65,6 +67,10 @@
       </nav>
     </div>
   </section>
+
+    <!--Ending of site nav bar-->
+
+    <!--Beginning of carousel-->
   <section class="carousel">
 
     <div id="carouselExampleIndicators" class="carousel slide">
@@ -101,9 +107,9 @@
   </section>
   <br>
 
+  <!--Ending of carousel-->
 
   <!--Beginning of carousel-->
-
 
   <section class=" pt-2 px-2">
     <div class="container-fluid">
@@ -271,7 +277,7 @@
   <!--Back to Top button-->
 
 
-  <a href="#" class="b2t mx-auto"><i class="fas fa-chevron-up"></i></a>
+  <a id="button"></a>
 
 
   <!--End to Top button-->
@@ -326,10 +332,6 @@
 
   <!--CSS Waves-->
 
-  <div class="header">
-    <div>
-
-
       <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
         viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
         <defs>
@@ -342,11 +344,8 @@
           <use xlink:href="#gentle-wave" x="48" y="7" fill="#7AC6D9" />
         </g>
       </svg>
-    </div>
-  </div>
 
   <!--End of waves-->
-
 
   <!--Beginning of footer-->
 
