--- a/About.html
+++ b/About.html
@@ -62,7 +62,14 @@
     </div>
   </section>
 
-
+  <section>
+    <div class="container-fluid">     
+      <div class="row">
+        <div class=""></div>
+      </div>
+      <img src="/images/Pattern.png" alt="">
+    </div>
+  </section>
 
 
 
