--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
                     <div class="card-body text-center">
                       <p>
                         <h5 class="card-title">
-                          Delivery
+                          Birria!
                         </h5>
                         <hr>
                         <a href="Order.html" class="btn btn-inner-clr inner-clr">
-                          Order Online
+                          Order Here!
                         </a>
                         <a href="index.html"><img class="card-img-top" src="/images/Birria.png" alt="Card image"></a>
                         <p class="card-text">
@@ -147,11 +147,11 @@
                     <div class="card-body text-center">
                       <p>
                         <h5 class="card-title">
-                          Delivery
+                          Empanada!
                         </h5>
                         <hr>
                         <a href="Order.html" class="btn btn-inner-clr inner-clr">
-                          Order Online
+                          Order Here!
                         </a>
                         <a href="index.html"><img class="card-img-top" src="/images/Empanada.png" alt="Card image"></a>
                         <p class="card-text">
@@ -166,11 +166,11 @@
                     <div class="card-body text-center">
                       <p>
                         <h5 class="card-title">
-                          Delivery
+                          Viscacha!
                         </h5>
                         <hr>
                         <a href="Order.html" class="btn btn-inner-clr inner-clr">
-                          Order Online
+                          Order Here!
                         </a>
                         <a href="index.html"><img class="card-img-top" src="/images/Viscacha.png" alt="Card image"></a>
                         <p class="card-text">
@@ -330,6 +330,12 @@
     </div>
   </section>
 
+  <!--Back to Top button-->
+
+
+  
+  <!--End to Top button-->
+
   <!--CSS Waves-->
 
       <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -399,13 +405,7 @@
 
 
 
-  <!--Back to Top button-->
 
-
-  <a href="#" class="b2t mx-auto"><i class="fas fa-chevron-up"></i></a>
-
-
-  <!--End to Top button-->
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
