--- a/About.html
+++ b/About.html
@@ -19,7 +19,9 @@
 
   </script>
 </head>
-<div class="container-fluid">
+
+  <!--Beginning of site nav bar-->
+
   <section>
     <div class="container-fluid">
       <nav class="navbar navbar-expand-sm fixed-top">
@@ -32,27 +34,23 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav ">
-            <li class="nav-item dropdown px-2">
-              <a class="nav-link dropdown-toggle btn inner-clr" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Continents
+            <li class="nav-item px-2">
+              <a href="Specialties.html" class="nav-link btn btn-inner-clr inner-clr">
+                Specialty Gums!
               </a>
-              <ul class="dropdown-menu">
-                <li><a href="Africa.html" class="btn inner-clrn dropdown-item">African Gum</a></li>
-                <li><a href="Asia.html" class="btn inner-clrn dropdown-item">Asian Gum</a></li>
-                <li><a href="Europe.html" class="btn inner-clrn dropdown-item">European Gum</a></li>
-                <li><a href="North America.html" class="btn inner-clrn dropdown-item">North American Gum</a></li>
-                <li><a href="Oceania.html" class="btn inner-clrn dropdown-item">Oceania Gum</a></li>
-                <li><a href="South America.html" class="btn inner-clrn dropdown-item">South American Gum</a></li>
-              </ul>
             </li>
             <li class="nav-item px-2">
-              <a href="Contact.html" class="nav-link btn inner-clr">
+              <a href="Our_gums.html" class="nav-link btn btn-inner-clr inner-clr">
+                Our Gums!
+              </a>
+            </li>
+            <li class="nav-item px-2">
+              <a href="Contact.html" class="nav-link btn btn-inner-clr inner-clr">
                 Contact Us!
               </a>
             </li>
             <li class="nav-item px-2">
-              <a href="About.html" class="nav-link btn inner-clr">
+              <a href="About.html" class="nav-link btn btn-inner-clr inner-clr">
                 About Us!
               </a>
             </li>
@@ -62,12 +60,15 @@
     </div>
   </section>
 
-  <section>
+  <!--Ending of site nav bar-->
+
+  <section class="About-intro">
     <div class="container-fluid">     
-      <div class="row">
-        <div class=""></div>
+      <div class="row align-items-center justify-content-center">
+        <div class="col-sm-12">
+          <img src="/images/Pattern.png" alt="">
+        </div>
       </div>
-      <img src="/images/Pattern.png" alt="">
     </div>
   </section>
 
@@ -140,7 +141,6 @@
 
 
 <!--End of footer-->
-</div>
 
 
 
