--- a/Specialties.html
+++ b/Specialties.html
@@ -18,6 +18,9 @@
 </head>
 
 <body>
+
+    <!--Beginning of nav bar-->
+
     <section>
         <nav class="navbar navbar-expand-sm fixed-top">
             <div class="container-fluid">
@@ -66,6 +69,13 @@
             </div>
         </nav>
     </section>
+
+<!--End of footer-->
+
+
+
+<!--Beginning of parallax-->
+
     <Section>
         <div class="container-fluid parallax">
 
@@ -74,5 +84,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
         </script>
+
+<!--End of parallax-->
 
 </body>
