--- a/buy.html
+++ b/buy.html
@@ -18,6 +18,9 @@
 </head>
 
 <body>
+
+<!--Beginning of nav bar-->
+
   <div class="container-fluid">
     <section>
       <div class="container-fluid">
@@ -62,6 +65,10 @@
       </div>
     </section>
 
+    <!--End of nav bar-->
+
+
+<!--Beginning of footer-->
 
     <div class="header">
       <div>
@@ -118,6 +125,8 @@
       </footer>
     </section>
   </div>
+
+  <!--End of footer-->
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
