--- a/About.html
+++ b/About.html
@@ -21,7 +21,7 @@
 </head>
 
   <!--Beginning of site nav bar-->
-
+bm
   <section>
     <div class="container-fluid">
       <nav class="navbar navbar-expand-sm fixed-top">
@@ -62,16 +62,36 @@
 
   <!--Ending of site nav bar-->
 
+  <br>
+  <br>
+  <br>
+  <br
+
+  
+
   <section class="About-intro">
     <div class="container-fluid">     
-      <div class="row align-items-center justify-content-center">
-        <div class="col-sm-12">
-          <img src="/images/Pattern.png" alt="">
+      <div class="row align-items-center justi fy-content-center">
+        <div class="col-sm-2 mx-auto">
+          <div class="text-center">
+            <h1>Our Story...</h1>
+          </div>
+        </div>
+        <div class="col-md-2 mx-auto">
+          <div class="text-center">
+            <h5>Jake, Maria, and Alex loved unique flavors and decided to create a website called "Exotic Gum". They spent months developing the perfect recipes for each flavor, launched their website, and used social media to build buzz. Soon, major retailers started stocking their gum, and their business grew. They expanded their product line and became successful entrepreneurs, proud of their unique and exciting flavors.</h5>
+          </div>
+        </div>
+        <div class="col-md-8">
+          <div class="text-center">
+
+          </div>
         </div>
       </div>
     </div>
   </section>
 
+  <!--End of intro-->
 
 
 
