--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 ?>
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +26,7 @@
   <section>
     <div class="container-fluid">
       <nav class="navbar navbar-expand-sm fixed-top">
-        <a class="navbar-brand ms-auto" href="index.html">
+        <a class="navbar-brand ms-auto" href="index.php">
           <img src="/images/newlogo.png" class="logonav">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -36,21 +35,15 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav ">
-            <li class="nav-item dropdown px-2">
-              <a class="nav-link dropdown-toggle btn btn-inner-clr inner-clr" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Continents
+            <li class="nav-item px-2">
+              <a href="Specialties.html" class="nav-link btn btn-inner-clr inner-clr">
+                Specialty Gums!
               </a>
-              <ul class="dropdown-menu">
-                <li><a href="Africa.html" class="btn inner-clrn1 dropdown-item">African Gum</a></li>
-                <li><a href="Asia.html" class="btn inner-clrn dropdown-item">Asian Gum</a></li>
-                <li><a href="Europe.html" class="btn inner-clrn dropdown-item">European Gum</a></li>
-                <li><a href="North America.html" class="btn inner-clrn dropdown-item">North American
-                    Gum</a></li>
-                <li><a href="Oceania.html" class="btn inner-clrn dropdown-item">Oceania Gum</a></li>
-                <li><a href="South America.html" class="btn inner-clrn dropdown-item">South American
-                    Gum</a></li>
-              </ul>
+            </li>
+            <li class="nav-item px-2">
+              <a href="Our_gums.html" class="nav-link btn btn-inner-clr inner-clr">
+                Our Gums!
+              </a>
             </li>
             <li class="nav-item px-2">
               <a href="Contact.html" class="nav-link btn btn-inner-clr inner-clr">
@@ -68,9 +61,9 @@
     </div>
   </section>
 
-    <!--Ending of site nav bar-->
+  <!--Ending of site nav bar-->
 
-    <!--Beginning of carousel-->
+  <!--Beginning of carousel-->
   <section class="carousel">
 
     <div id="carouselExampleIndicators" class="carousel slide">
@@ -127,17 +120,17 @@
                   <div class="card card-carousel mid-clr">
                     <div class="card-body text-center">
                       <p>
-                        <h5 class="card-title">
-                          Birria!
-                        </h5>
-                        <hr>
-                        <a href="Order.html" class="btn btn-inner-clr inner-clr">
-                          Order Here!
-                        </a>
-                        <a href="index.html"><img class="card-img-top" src="/images/Birria.png" alt="Card image"></a>
-                        <p class="card-text">
-                          Order from our online menu and have it delivered straight to your door!
-                        </p>
+                      <h5 class="card-title">
+                        Birria!
+                      </h5>
+                      <hr>
+                      <a href="Order.html" class="btn btn-inner-clr inner-clr">
+                        Order Here!
+                      </a>
+                      <a href="index.html"><img class="card-img-top" src="/images/Birria.png" alt="Card image"></a>
+                      <p class="card-text">
+                        Order from our online menu and have it delivered straight to your door!
+                      </p>
                       </p>
                     </div>
                   </div>
@@ -146,17 +139,17 @@
                   <div class="card card-carousel mid-clr">
                     <div class="card-body text-center">
                       <p>
-                        <h5 class="card-title">
-                          Empanada!
-                        </h5>
-                        <hr>
-                        <a href="Order.html" class="btn btn-inner-clr inner-clr">
-                          Order Here!
-                        </a>
-                        <a href="index.html"><img class="card-img-top" src="/images/Empanada.png" alt="Card image"></a>
-                        <p class="card-text">
-                          Order from our online menu and have it delivered straight to your door!
-                        </p>
+                      <h5 class="card-title">
+                        Empanada!
+                      </h5>
+                      <hr>
+                      <a href="Order.html" class="btn btn-inner-clr inner-clr">
+                        Order Here!
+                      </a>
+                      <a href="index.html"><img class="card-img-top" src="/images/Empanada.png" alt="Card image"></a>
+                      <p class="card-text">
+                        Order from our online menu and have it delivered straight to your door!
+                      </p>
                       </p>
                     </div>
                   </div>
@@ -165,17 +158,17 @@
                   <div class="card card-carousel mid-clr">
                     <div class="card-body text-center">
                       <p>
-                        <h5 class="card-title">
-                          Viscacha!
-                        </h5>
-                        <hr>
-                        <a href="Order.html" class="btn btn-inner-clr inner-clr">
-                          Order Here!
-                        </a>
-                        <a href="index.html"><img class="card-img-top" src="/images/Viscacha.png" alt="Card image"></a>
-                        <p class="card-text">
-                          Order from our online menu and have it delivered straight to your door!
-                        </p>
+                      <h5 class="card-title">
+                        Viscacha!
+                      </h5>
+                      <hr>
+                      <a href="Order.html" class="btn btn-inner-clr inner-clr">
+                        Order Here!
+                      </a>
+                      <a href="index.html"><img class="card-img-top" src="/images/Viscacha.png" alt="Card image"></a>
+                      <p class="card-text">
+                        Order from our online menu and have it delivered straight to your door!
+                      </p>
                       </p>
                     </div>
                   </div>
@@ -197,17 +190,17 @@
                   <div class="card card-carousel mid-clr">
                     <div class="card-body text-center">
                       <p>
-                        <h5 class="card-title">
-                          Delivery
-                        </h5>
-                        <hr>
-                        <a href="Order.html" class="btn btn-inner-clr inner-clr">
-                          Order Online
-                        </a>
-                        <a href="index.html"><img class="card-img-top" src="/images/Birria.png" alt="Card image"></a>
-                        <p class="card-text">
-                          Order from our online menu and have it delivered straight to your door!
-                        </p>
+                      <h5 class="card-title">
+                        Delivery
+                      </h5>
+                      <hr>
+                      <a href="Order.html" class="btn btn-inner-clr inner-clr">
+                        Order Online
+                      </a>
+                      <a href="index.html"><img class="card-img-top" src="/images/Birria.png" alt="Card image"></a>
+                      <p class="card-text">
+                        Order from our online menu and have it delivered straight to your door!
+                      </p>
                       </p>
                     </div>
                   </div>
@@ -216,17 +209,17 @@
                   <div class="card card-carousel mid-clr">
                     <div class="card-body text-center">
                       <p>
-                        <h5 class="card-title">
-                          Delivery
-                        </h5>
-                        <hr>
-                        <a href="Order.html" class="btn btn-inner-clr inner-clr">
-                          Order Online
-                        </a>
-                        <a href="index.html"><img class="card-img-top" src="/images/Empanada.png" alt="Card image"></a>
-                        <p class="card-text">
-                          Order from our online menu and have it delivered straight to your door!
-                        </p>
+                      <h5 class="card-title">
+                        Delivery
+                      </h5>
+                      <hr>
+                      <a href="Order.html" class="btn btn-inner-clr inner-clr">
+                        Order Online
+                      </a>
+                      <a href="index.html"><img class="card-img-top" src="/images/Empanada.png" alt="Card image"></a>
+                      <p class="card-text">
+                        Order from our online menu and have it delivered straight to your door!
+                      </p>
                       </p>
                     </div>
                   </div>
@@ -235,17 +228,17 @@
                   <div class="card card-carousel mid-clr">
                     <div class="card-body text-center">
                       <p>
-                        <h5 class="card-title">
-                          Delivery
-                        </h5>
-                        <hr>
-                        <a href="Order.html" class="btn btn-inner-clr inner-clr">
-                          Order Online
-                        </a>
-                        <a href="index.html"><img class="card-img-top" src="/images/Viscacha.png" alt="Card image"></a>
-                        <p class="card-text">
-                          Order from our online menu and have it delivered straight to your door!
-                        </p>
+                      <h5 class="card-title">
+                        Delivery
+                      </h5>
+                      <hr>
+                      <a href="Order.html" class="btn btn-inner-clr inner-clr">
+                        Order Online
+                      </a>
+                      <a href="index.html"><img class="card-img-top" src="/images/Viscacha.png" alt="Card image"></a>
+                      <p class="card-text">
+                        Order from our online menu and have it delivered straight to your door!
+                      </p>
                       </p>
                     </div>
                   </div>
@@ -306,7 +299,7 @@
                 <h5 class="card-title">Want to Know More About our Company?</h5>
                 <div class="row">
                   <p class="card-text">
-                   
+
                   </p>
                 </div>
                 <div class="row">
@@ -333,23 +326,23 @@
   <!--Back to Top button-->
 
 
-  
+
   <!--End to Top button-->
 
   <!--CSS Waves-->
 
-      <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-        viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
-        <defs>
-          <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
-        </defs>
-        <g class="parallax">
-          <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(122,198,217,0.7" />
-          <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(109,178,195,0.5)" />
-          <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(122,198,217,0.3)" />
-          <use xlink:href="#gentle-wave" x="48" y="7" fill="#7AC6D9" />
-        </g>
-      </svg>
+  <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28"
+    preserveAspectRatio="none" shape-rendering="auto">
+    <defs>
+      <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+    </defs>
+    <g class="parallax">
+      <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(122,198,217,0.7" />
+      <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(109,178,195,0.5)" />
+      <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(122,198,217,0.3)" />
+      <use xlink:href="#gentle-wave" x="48" y="7" fill="#7AC6D9" />
+    </g>
+  </svg>
 
   <!--End of waves-->
 
@@ -410,7 +403,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-  </script>
+    </script>
 </body>
 
 </html>
